--- a/nodejs/app/features/Bible/components/content/less/content.less
+++ b/nodejs/app/features/Bible/components/content/less/content.less
@@ -104,7 +104,7 @@
 		height: 70px;
 		padding-left: 10px;
 		padding-right: 10px;
-		z-index: 50 !important;
+		z-index: 8 !important;
 	}
 
 	&.parallel {
